--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,199 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     tools:context="com.example.android.mathsquiz1stgrade.MainActivity">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-</android.support.constraint.ConstraintLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/background"
+        android:contentDescription="@string/back_img"/>
+    <ScrollView
+        android:id="@+id/quiz_scroll"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            style="@style/LinearVertical"
+            android:padding="16dp">
+            <LinearLayout
+                style="@style/LinearVertical"
+                android:layout_marginBottom="40dp"
+                android:background="#ddFFB74D"
+                android:padding="16dp">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:lineSpacingExtra="6dp"
+                    android:text="@string/title"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="28sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+            <!-- Quiz Questions Box -->
+            <LinearLayout style="@style/LinearVertical">
+                <!-- Name Field -->
+                <TextView
+                    style="@style/QuestionsLabels"
+                    android:text="@string/name" />
+                <EditText
+                    android:id="@+id/name_field"
+                    style="@style/TransparentWhiteBox" />
+                <!-- Question 01 -->
+                <TextView
+                    android:id="@+id/q01_lable"
+                    style="@style/QuestionsLabels"
+                    android:text="@string/question01" />
+                <EditText
+                    android:id="@+id/q01"
+                    style="@style/TransparentWhiteBox"
+                    android:inputType="number" />
+                <!-- Question 02 -->
+                <TextView
+                    android:id="@+id/q02_lable"
+                    style="@style/QuestionsLabels"
+                    android:text="@string/question02" />
+                <RadioGroup
+                    android:id="@+id/rg_q02"
+                    style="@style/RadioCheckGroup">
+                    <RadioButton
+                        android:id="@+id/q02_1"
+                        style="@style/RadioCheckButtoms"
+                        android:text="@string/answer_q02_1" />
+                    <RadioButton
+                        android:id="@+id/q02_2"
+                        style="@style/RadioCheckButtoms"
+                        android:text="@string/answer_q02_2" />
+                    <RadioButton
+                        android:id="@+id/q02_3"
+                        style="@style/RadioCheckButtoms"
+                        android:text="@string/answer_q02_3" />
+                </RadioGroup>
+                <!-- Question 03 -->
+                <TextView
+                    android:id="@+id/q03_lable"
+                    style="@style/QuestionsLabels"
+                    android:text="@string/select_correct" />
+                <LinearLayout style="@style/RadioCheckGroup">
+                    <CheckBox
+                        android:id="@+id/q03_1"
+                        style="@style/RadioCheckButtoms"
+                        android:text="@string/answer_q03_1" />
+                    <CheckBox
+                        android:id="@+id/q03_2"
+                        style="@style/RadioCheckButtoms"
+                        android:text="@string/answer_q03_2" />
+                    <CheckBox
+                        android:id="@+id/q03_3"
+                        style="@style/RadioCheckButtoms"
+                        android:text="@string/answer_q03_3" />
+                    <CheckBox
+                        android:id="@+id/q03_4"
+                        style="@style/RadioCheckButtoms"
+                        android:text="@string/answer_q03_4" />
+                </LinearLayout>
+                <!-- Question 04 -->
+                <TextView
+                    android:id="@+id/q04_lable"
+                    style="@style/QuestionsLabels"
+                    android:text="@string/question04" />
+                <RadioGroup
+                    android:id="@+id/rg_q04"
+                    style="@style/RadioCheckGroup">
+                    <RadioButton
+                        android:id="@+id/q04_1"
+                        style="@style/RadioCheckButtoms"
+                        android:text="@string/answer_q04_1" />
+                    <RadioButton
+                        android:id="@+id/q04_2"
+                        style="@style/RadioCheckButtoms"
+                        android:text="@string/answer_q04_2" />
+                    <RadioButton
+                        android:id="@+id/q04_3"
+                        style="@style/RadioCheckButtoms"
+                        android:text="@string/answer_q04_3" />
+                </RadioGroup>
+                <!-- Question 05 -->
+                <TextView
+                    android:id="@+id/q05_lable"
+                    style="@style/QuestionsLabels"
+                    android:text="@string/question05" />
+                <RadioGroup
+                    android:id="@+id/rg_q05"
+                    style="@style/RadioCheckGroup">
+                    <RadioButton
+                        android:id="@+id/q05_1"
+                        style="@style/RadioCheckButtoms"
+                        android:text="@string/answer_q05_1" />
+                    <RadioButton
+                        android:id="@+id/q05_2"
+                        style="@style/RadioCheckButtoms"
+                        android:text="@string/answer_q05_2" />
+                    <RadioButton
+                        android:id="@+id/q05_3"
+                        style="@style/RadioCheckButtoms"
+                        android:text="@string/answer_q05_3" />
+                </RadioGroup>
+                <!-- Question 06 -->
+                <TextView
+                    android:id="@+id/q06_lable"
+                    style="@style/QuestionsLabels"
+                    android:text="@string/question06" />
+                <RadioGroup
+                    android:id="@+id/rg_q06"
+                    style="@style/RadioCheckGroup">
+                    <RadioButton
+                        android:id="@+id/q06_1"
+                        style="@style/RadioCheckButtoms"
+                        android:text="@string/answer_q06_1" />
+                    <RadioButton
+                        android:id="@+id/q06_2"
+                        style="@style/RadioCheckButtoms"
+                        android:text="@string/answer_q06_2" />
+                    <RadioButton
+                        android:id="@+id/q06_3"
+                        style="@style/RadioCheckButtoms"
+                        android:text="@string/answer_q06_3" />
+                </RadioGroup>
+                <!-- Question 07 -->
+                <TextView
+                    android:id="@+id/q07_lable"
+                    style="@style/QuestionsLabels"
+                    android:text="@string/select_correct" />
+                <LinearLayout style="@style/RadioCheckGroup">
+                    <CheckBox
+                        android:id="@+id/q07_1"
+                        style="@style/RadioCheckButtoms"
+                        android:text="@string/answer_q07_1" />
+                    <CheckBox
+                        android:id="@+id/q07_2"
+                        style="@style/RadioCheckButtoms"
+                        android:text="@string/answer_q07_2" />
+                    <CheckBox
+                        android:id="@+id/q07_3"
+                        style="@style/RadioCheckButtoms"
+                        android:text="@string/answer_q07_3" />
+                    <CheckBox
+                        android:id="@+id/q07_4"
+                        style="@style/RadioCheckButtoms"
+                        android:text="@string/answer_q07_4" />
+                </LinearLayout>
+                <!-- Submit -->
+                <Button
+                    android:id="@+id/submit_btn"
+                    style="@style/Buttoms"
+                    android:onClick="submit"
+                    android:text="@string/submit" />
+                <!-- Try Again (Hiden) -->
+                <Button
+                    android:id="@+id/try_again"
+                    style="@style/Buttoms"
+                    android:onClick="restart"
+                    android:text="@string/restart"
+                    android:visibility="gone" />
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
+</RelativeLayout>
