--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <!-- Main Colors -->
+    <color name="colorPrimary">#FF9800</color>
+    <color name="colorPrimaryDark">#F57C00</color>
+    <color name="colorAccent">#448AFF</color>
+    <!-- Other Colors -->
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
+    <color name="grayTransparent">#ddcccccc</color>
+    <color name="greenTransparent">#dd008000</color>
+    <color name="redTransparent">#ddff0000</color>
+    <color name="whiteTransparent">#ddffffff</color>
+    <color name="orangeTransparent">#ddFFB74D</color>
 </resources>
