--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,64 @@
 <resources>
-
-    <!-- Base application theme. -->
+    <!-- Base application theme -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">#FF9800</item>
+        <item name="colorPrimaryDark">#F57C00</item>
+        <item name="colorAccent">#FF9800</item>
     </style>
-
+    <!-- Base Linear Layout -->
+    <style name="LinearVertical">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:orientation">vertical</item>
+    </style>
+    <!-- Questions Labels -->
+    <style name="QuestionsLabels">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@color/grayTransparent</item>
+        <item name="android:padding">16dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">24sp</item>
+    </style>
+    <!-- Transparent White Box -->
+    <style name="TransparentWhiteBox">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:inputType">textCapWords</item>
+        <item name="android:lineSpacingExtra">6dp</item>
+        <item name="android:paddingTop">16dp</item>
+        <item name="android:paddingRight">16dp</item>
+        <item name="android:paddingBottom">24dp</item>
+        <item name="android:paddingLeft">16dp</item>
+        <item name="android:layout_marginBottom">40dp</item>
+        <item name="android:background">@color/whiteTransparent</item>
+    </style>
+    <!-- Radio Base Style -->
+    <style name="RadioBase" parent="android:TextAppearance.Large">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+    <!-- Radio Group -->
+    <style name="RadioCheckGroup" parent="RadioBase">
+        <item name="android:orientation">vertical</item>
+        <item name="android:background">@color/whiteTransparent</item>
+        <item name="android:padding">16dp</item>
+        <item name="android:layout_marginBottom">40dp</item>
+    </style>
+    <!-- Radio Buttom -->
+    <style name="RadioCheckButtoms" parent="RadioBase">
+        <item name="android:paddingLeft">16dp</item>
+        <item name="buttonTint">@color/colorPrimary</item>
+    </style>
+    <!-- Buttoms -->
+    <style name="Buttoms" parent="Widget.AppCompat.Button.Colored" >
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_margin">16dp</item>
+        <item name="colorButtonNormal">@color/colorPrimary</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="buttonTint">@color/colorPrimary</item>
+    </style>
 </resources>
